# 2021haskellt1-ThiagoRSLeao

./: 2021haskellt1.cabal  Abstrart.txt  CHANGELOG.md  readme.txt
app/: Main.hs
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
